[package]
name = "a_ou_z"
version = "0.1.0"
description = "A prediction game"
authors = ["Olivier Lemasle"]
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/olivierlemasle/AouZ"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "a_ou_z_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
