[package]
name = "a_ou_z"
version = "0.1.0"
description = "A prediction game"
authors = ["Olivier Lemasle"]
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/olivierlemasle/AouZ"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }

[features]
# this feature is used for production builds or when `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
